[gd_scene load_steps=3 format=3 uid="uid://dbwmssim0wsuu"]

[ext_resource type="Script" path="res://Util/SpikedComponent/SpikedComponent.gd" id="1_sx7uc"]
[ext_resource type="PackedScene" uid="uid://c1vthwb7dw5nk" path="res://Entitys/Spike/Spike.tscn" id="2_aoklg"]

[node name="SpikedComponent" type="Node2D"]
script = ExtResource("1_sx7uc")

[node name="Spike_up" parent="." instance=ExtResource("2_aoklg")]
visible = false
position = Vector2(2.08165e-12, 2.08165e-12)

[node name="Spike_down" parent="." instance=ExtResource("2_aoklg")]
visible = false
position = Vector2(2.08165e-12, 2.08165e-12)
rotation = 3.14159

[node name="Spike_right" parent="." instance=ExtResource("2_aoklg")]
visible = false
position = Vector2(2.08165e-12, 2.08165e-12)
rotation = 1.5708

[node name="Spike_left" parent="." instance=ExtResource("2_aoklg")]
visible = false
position = Vector2(0, 2.08165e-12)
rotation = 4.71239
